# nocover

./: LICENSE  README.md  pyproject.toml
.github/workflows/: linting.yaml
src/nocover/: appinfo.py  cli.py  config.py  general_classes.py  general_functions.py  layout.tcss  list_items.py  loading_screen.py  ui.py
src/nocover/brl/: book.py  generate_brl.py  list_book.py  read_series_brl.py
src/nocover/config_files/: logging_config.json
src/nocover/hardcover/: get_books.py  get_data.py  get_lists.py  get_profile.py  get_prompts.py  get_series.py  raw_queries.py
src/nocover/modals/: add_modal.py  error_page.py  help_page.py  list_add_modal.py  prompt_add_modal.py  read_modal.py  series_add_modal.py  start_up.py
