[project]
name = "nocover"
version = "0.1.0"
description = "A TUI application to supplement Hardcover"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
]

[project.scripts]
nocover = "nocover.cli:main"

[build-system]
requires = ["uv_build >= 0.8.17, <0.9.0"]
build-backend = "uv_build"
